--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "dependencies": {
     "@emotion/css": "^11.7.1",
     "@sinclair/typebox": "^0.21.2",
-    "@sunmao-ui/core": "0.6.0-alpha.0",
-    "@sunmao-ui/editor": "0.6.0-alpha.0",
-    "@sunmao-ui/runtime": "0.6.0-alpha.0",
+    "@sunmao-ui/arco-lib": "^0.2.0-alpha.1",
+    "@sunmao-ui/core": "0.6.0-alpha.1",
+    "@sunmao-ui/editor": "0.6.0-alpha.1",
+    "@sunmao-ui/runtime": "0.6.0-alpha.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.6",
