--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@sunmao-ui/core": "0.6.0-alpha.1",
     "@sunmao-ui/editor": "0.6.0-alpha.1",
     "@sunmao-ui/runtime": "0.6.0-alpha.1",
+    "i18next": "^21.6.16",
+    "i18next-browser-languagedetector": "^6.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.6",
