--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@emotion/css": "^11.7.1",
     "@sinclair/typebox": "^0.21.2",
-    "@sunmao-ui/arco-lib": "^0.2.0-alpha.1",
-    "@sunmao-ui/core": "0.6.0-alpha.1",
-    "@sunmao-ui/editor": "0.6.0-alpha.1",
-    "@sunmao-ui/runtime": "0.6.0-alpha.1",
+    "@sunmao-ui/arco-lib": "^0.3.0",
+    "@sunmao-ui/core": "^0.7.0",
+    "@sunmao-ui/editor": "^0.7.0",
+    "@sunmao-ui/runtime": "^0.7.0",
+    "@types/react-big-calendar": "^0.38.0",
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.40.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.6",
     "react-router-dom": "^6.2.2"
