--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@sunmao-ui/editor": "^0.7.0",
     "@sunmao-ui/runtime": "^0.7.0",
     "@types/react-big-calendar": "^0.38.0",
-    "highlight.js": "^11.5.1",
+    "@types/react-highlight": "^0.12.5",
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
     "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-big-calendar": "^0.40.2",
     "react-dom": "^17.0.2",
+    "react-highlight": "^0.14.0",
     "react-i18next": "^11.15.6",
     "react-router-dom": "^6.2.2"
   },
