--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint src --ext .ts,.tsx"
   },
   "dependencies": {
+    "@code-surfer/standalone": "^3.1.1",
+    "@code-surfer/themes": "^3.1.1",
     "@emotion/css": "^11.7.1",
+    "@mdx-js/react": "^2.1.2",
     "@sinclair/typebox": "^0.21.2",
     "@sunmao-ui/arco-lib": "^0.3.0",
     "@sunmao-ui/core": "^0.7.0",
@@ -25,7 +28,9 @@
     "react-dom": "^17.0.2",
     "react-highlight": "^0.14.0",
     "react-i18next": "^11.15.6",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "theme-ui": "^0.14.6",
+    "use-spring": "^0.2.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.13",
