--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint src --ext .ts,.tsx"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.4.9",
     "@code-surfer/standalone": "^3.1.1",
     "@code-surfer/themes": "^3.1.1",
     "@emotion/css": "^11.7.1",
